cli/testdata/invalid-modules/invalid-syntax/cue.mod/module.cue
module: "opm.test/invalid-syntax@v0"
language: {
	version: "v0.15.0"
}
